PP-15127: fix simple IDE inspections